# Multi-Agent-Reinforcement-Learning

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  RUN_SUMMARY_NOTEBOOK_PILOT.md  notebook.ipynb  notebook_colab.ipynb  pyproject.toml  run_demo.py  run_experiment.py
agents/: __init__.py  base.py  heuristic_math.py  icl_agent.py  ollama_agent.py  scripted.py  self_refine_agent.py
analysis/: __init__.py  compute_statistics.py  generate_tables.py  plot_learning_curves.py
configs/: experiments.yaml  smoke.yaml
data/: __init__.py  gsm8k.py
docs/: PAPER_EXPERIMENTS.md
environment/: __init__.py  multi_agent_environment.py
experiment/: __init__.py  ablation.py  runner.py
multi_agent_rl_environment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
output2/notebook-test/: results.jsonl  summary.json
output2/notebook-train/: results.jsonl  run_manifest.json
outputs/colab-test/: learning_curve.jsonl  results.jsonl  run_manifest.json  summary.json
outputs/colab-train/: learning_curve.jsonl  results.jsonl  run_manifest.json  summary.json
outputs/conference-smoke/: learning_curve.jsonl  results.jsonl  run_manifest.json
outputs/conference-smoke-v2/: learning_curve.jsonl  results.jsonl  run_manifest.json  summary.json
outputs/final-conversion-smoke/: learning_curve.jsonl  results.jsonl  run_manifest.json  summary.json
scripts/: run_smoke_ablation.py
tests/: test_environment.py
utils/: __init__.py  attention.py  embeddings.py  json_utils.py  logging_utils.py  math_solver.py  recoverability_rewards.py  rewards.py  rl.py
(+50 files in other folders)
